# delta-funnel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  release-plz.toml
.github/: path-filters.json
.github/workflows/: ci.yml  docs.yml  pypi-build.yml  pypi-cache.yml  pypi.yml  release-plz.yml  sqlserver-integration.yml  testpypi-diagnostics.yml  (+1 more)
crates/delta-funnel/: Cargo.toml
crates/delta-funnel-perfetto/: Cargo.toml
crates/delta-funnel-perfetto/src/: lib.rs  profile_layer.rs
crates/delta-funnel-python/: Cargo.toml  README.md  build.rs  deltafunnel.pyi  pyproject.toml
crates/delta-funnel-python/src/: exception.rs  json.rs  lib.rs  logging.rs  output.rs  perfetto_diagnostics.rs  progress.rs  session.rs  table.rs
crates/delta-funnel-python/tests/: fake_rich.py  ipykernel_progress_smoke.py  progress_fixture.py  progress_smoke.parquet.b64  progress_smoke.py
crates/delta-funnel/examples/: query_load_dry_run.rs
crates/delta-funnel/src/: batch_pipeline.rs  delta_kernel_adapter.rs  dependency_guard.rs  error.rs  lib.rs  named_source.rs  observability.rs  orchestrator.rs  perfetto_profile.rs  pipeline.rs  profiling.rs  progress.rs  query_engine.rs  redaction.rs  report.rs  source_name.rs  source_snapshot.rs  source_uri.rs  sql_server.rs  support.rs  table_formats.rs
crates/delta-funnel/src/orchestrator/: runtime.rs  session.rs
crates/delta-funnel/src/orchestrator/session/: dry_run_report.rs  errors.rs  handles.rs  mssql.rs  mssql_output.rs  options.rs  query_handoff.rs  registry.rs  source_report.rs  sql_server_workflows.rs  streams.rs  test_support.rs  write_all.rs  write_all_options.rs
crates/delta-funnel/src/orchestrator/session/mssql/: output.rs  write_all.rs
crates/delta-funnel/src/orchestrator/session/mssql/write_all/: cache_alias.rs  cache_plan.rs  cached_stream.rs  planning.rs  report.rs  request.rs  workflow.rs
crates/delta-funnel/src/orchestrator/session/registry/: derived.rs  lineage.rs  source.rs
crates/delta-funnel/src/orchestrator/session/sql_server_workflows/: output.rs  write_all.rs
crates/delta-funnel/src/orchestrator/session/sql_server_workflows/write_all/: cache_alias.rs  cache_plan.rs  cache_report.rs  cached_stream.rs  report.rs  request.rs  workflow.rs
crates/delta-funnel/src/orchestrator/session/streams/: cached_output.rs
crates/delta-funnel/src/perfetto_profile/: mod.rs  profile_layer.rs  ranked_report.rs  report_aggregate.rs  report_cli.rs  report_health.rs  report_html.css  report_html.js  report_html.rs  report_terminal.rs  report_trace_processor.rs  report_trace_sanitizer.rs
crates/delta-funnel/src/perfetto_profile/sql/: capture_health.sql  ranked_profile_base.sql  ranked_report.sql  sample_correlation.sql
crates/delta-funnel/src/query_engine/: datafusion.rs
crates/delta-funnel/src/query_engine/datafusion/: catalog.rs  execution.rs  execution_environment.rs  execution_profile.rs  file_reader.rs  file_task.rs  file_task_partition.rs  filters.rs  operator_activity.rs  partition_target.rs  planning.rs  planning_activity.rs  profiled_execution.rs  profiled_object_store.rs  projection.rs  provider.rs  provider_tests.rs  registration.rs  scan_plan.rs  session.rs
crates/delta-funnel/src/query_engine/datafusion/catalog/: provider.rs  provider_tests.rs  registration.rs
crates/delta-funnel/src/query_engine/datafusion/execution/: async_scheduler.rs  environment.rs  file_reader.rs  metered_object_store.rs  native_async_reader.rs  native_async_row_group_pruning.rs  planning_exec.rs  read_stats.rs  reader_backend.rs  scheduling.rs
crates/delta-funnel/src/query_engine/datafusion/filters/: analysis.rs  partition_pushdown.rs  stats_pushdown.rs
crates/delta-funnel/src/query_engine/datafusion/operator_activity/: task_tracing.rs
crates/delta-funnel/src/query_engine/datafusion/planning/: dynamic_filters.rs  dynamic_partition_pruning.rs  file_task.rs  file_task_partition.rs  filters.rs  partition_target.rs  projection.rs  scan_plan.rs
crates/delta-funnel/src/query_engine/datafusion/planning/filters/: analysis.rs  partition_pushdown.rs  stats_pushdown.rs
crates/delta-funnel/src/report/: delta.rs  execution_profile.rs  json.rs  sql_server.rs  timeline.rs  trace_contract.rs
crates/delta-funnel/src/report/delta/: protocol.rs  source.rs
crates/delta-funnel/src/report/sql_server/: dry_run.rs  write.rs  write_all.rs
crates/delta-funnel/src/sql_server/: connection.rs  ddl_planning.rs  execution.rs  lifecycle_execution.rs  lifecycle_planning.rs  output_planning.rs  planning.rs  schema_planning.rs  sink.rs  target.rs  workflow.rs  write.rs
crates/delta-funnel/src/sql_server/execution/: connection.rs  lifecycle.rs  sink.rs  workflow.rs  write.rs
crates/delta-funnel/src/sql_server/planning/: ddl.rs  lifecycle.rs  output.rs  schema.rs
crates/delta-funnel/src/support/: redaction.rs
crates/delta-funnel/src/table_formats/: delta.rs  name.rs
crates/delta-funnel/src/table_formats/delta/: deletion_vector.rs  kernel.rs  name.rs  partition_metadata.rs  partition_metadata_predicate.rs  protocol.rs  read.rs  snapshot.rs  test_support.rs  uri.rs
crates/delta-funnel/src/table_formats/delta/partition_metadata_predicate/: convert.rs  expr.rs  names.rs  value.rs
crates/delta-funnel/tests/: delta_reader_features.rs  execution_profile_api.rs  mssql_direct_raw_bulk.rs  orchestrator_e2e.rs  perfetto_ranked_report_cli.rs  preview_api.rs  timeline_api.rs
crates/delta-funnel/tests/fixtures/type-widening/: README.md
crates/delta-funnel/tests/fixtures/v2-checkpoint-parquet-with-sidecars/: README.md
crates/delta-funnel/tests/fixtures/v2-checkpoint-parquet-with-sidecars/_delta_log/: _last_checkpoint
docs/: dependency-alignment.md  dynamic-partition-pruning-investigation.md  failure-reports-and-tracing.md  mssql-integration-tests.md  native-async-backend-benchmark-notes.md  provider-read-scheduling.md  python-perfetto-diagnostics.md  scan-partition-benchmark.md  scan-partition-target-policy.md
docs-site/: README.md  mkdocs.yml  requirements.txt
examples/: perfetto_preview.py
xtask/: Cargo.toml
(+51 files in other folders)
