[workspace]
members = [
    "crates/delta-funnel",
    "crates/delta-funnel-perfetto",
    "crates/delta-funnel-python",
    "xtask",
]
resolver = "3"

[workspace.package]
version = "0.3.3"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/mag1cfrog/delta-funnel"
homepage = "https://mag1cfrog.github.io/delta-funnel/"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
