[package]
name = "delta-funnel-python"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bindings for Delta Funnel"

[lib]
name = "deltafunnel"
crate-type = ["cdylib"]

[lints]
workspace = true

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
delta-funnel = { path = "../delta-funnel" }
pyo3 = "0.29"
serde_json = "1"

[dev-dependencies]
arrow-schema = "58.3.0"
pyo3 = { version = "0.29", features = ["auto-initialize"] }
tokio = { version = "1", features = ["rt"] }
