[build-system]
requires = ["maturin>=1.11,<2"]
build-backend = "maturin"

[project]
name = "deltafunnel"
version = "0.1.0"
description = "Python bindings for Delta Funnel"
readme = "../../README.md"
requires-python = ">=3.10"
license = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/mag1cfrog/delta-funnel"
Repository = "https://github.com/mag1cfrog/delta-funnel"

[tool.maturin]
bindings = "pyo3"
module-name = "deltafunnel"
features = ["extension-module"]
