[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "deltafunnel"
dynamic = ["version"]
description = "Lightweight, fast Delta Lake to SQL Server loads with DataFusion SQL and native TDS, without Spark or ODBC"
readme = "../../README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["delta-lake", "sql-server", "datafusion", "tds", "arrow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["rich>=14,<15"]

[project.scripts]
delta-funnel-perfetto = "deltafunnel.deltafunnel:_run_perfetto_cli"

[project.urls]
Homepage = "https://mag1cfrog.github.io/delta-funnel/"
Documentation = "https://mag1cfrog.github.io/delta-funnel/"
Repository = "https://github.com/mag1cfrog/delta-funnel"
Issues = "https://github.com/mag1cfrog/delta-funnel/issues"
Changelog = "https://github.com/mag1cfrog/delta-funnel/blob/main/CHANGELOG.md"
"Release Notes" = "https://github.com/mag1cfrog/delta-funnel/releases"
PyPI = "https://pypi.org/project/deltafunnel/"

[tool.maturin]
bindings = "pyo3"
module-name = "deltafunnel"
include = [
    { path = "perfetto/*", from = "out-dir", to = "deltafunnel/" },
]
