[package]
name = "delta-funnel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lightweight, fast Delta Lake to SQL Server loads with DataFusion SQL and native TDS"
readme = "../../README.md"
keywords = ["delta", "arrow", "mssql", "sql-server"]
categories = ["database"]

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
arrow-schema = "58.3.0"
arrow-tiberius = "0.1.5"
chrono = { version = "0.4", default-features = false, features = ["std"] }
datafusion = { version = "53.1.0", default-features = false, features = [
    "sql",
] }
delta_kernel = { version = "0.23.0", default-features = false, features = [
    "arrow",
    "default-engine-native-tls",
    "internal-api",
] }
futures-util = "0.3"
libc = "0.2"
object_store = "0.13.2"
parquet = { version = "58.3.0", features = ["async", "object_store"] }
snafu = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_SystemInformation"] }
