[package]
name = "delta-funnel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lightweight, fast Delta Lake to SQL Server loads with DataFusion SQL and native TDS"
readme = "../../README.md"
keywords = ["delta", "arrow", "mssql", "sql-server"]
categories = ["database"]

[lints]
workspace = true

[features]
perfetto-profile = [
    "dep:hyper-util",
    "dep:perfetto-sdk",
    "dep:same-file",
    "dep:tempfile",
]

[dependencies]
async-trait = "0.1"
arrow-schema = "58.3.0"
arrow-tiberius = "0.2.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
datafusion = { version = "53.1.0", default-features = false, features = [
    "sql",
] }
delta_kernel = { version = "0.23.0", default-features = false, features = [
    "arrow",
    "default-engine-native-tls",
    "internal-api",
] }
futures-util = "0.3"
hyper-util = { version = "0.1.20", default-features = false, features = ["tracing"], optional = true }
libc = "0.2"
object_store = "0.13.2"
parquet = { version = "58.3.0", features = ["async", "object_store"] }
perfetto-sdk = { version = "1.0.3", optional = true }
same-file = { version = "1", optional = true }
snafu = "0.9"
serde_json = "1"
tempfile = { version = "3", optional = true }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_SystemInformation"] }
